Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -131,7 +131,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "X = preprocessed_drop"
    ]
   },
   {
