--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "X = preprocessed_drop"
+    "X = preprocessed.drop"
    ]
   },
   {
