Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "X = preprocessed.drop ()"
+    "X = preprocessed.drop ('Sale_Price.log')"
    ]
   },
   {
