--- a/index.ipynb
+++ b/index.ipynb
@@ -132,7 +132,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "X = preprocessed.drop ('Sale_Price.log')"
+    "X = preprocessed.drop ('Sale_Price.log', axis=1)\n"
    ]
   },
   {
