Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,7 +133,7 @@
    "source": [
     "# Your code here\n",
     "X = preprocessed.drop ('Sale_Price.log', axis=1)\n",
-    "y = pre"
+    "y = preprocessed"
    ]
   },
   {
