--- a/index.ipynb
+++ b/index.ipynb
@@ -133,7 +133,7 @@
    "source": [
     "# Your code here\n",
     "X = preprocessed.drop ('Sale_Price.log', axis=1)\n",
-    "y = preprocessed"
+    "y = preprocessed['Sale_Price.log']"
    ]
   },
   {
