Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -151,7 +151,7 @@
     "X = preprocessed.drop ('Sale_Price.log', axis=1)\n",
     "y = preprocessed['Sale_Price.log']\n",
     "\n",
-    "result = stepwise_selection(X, y, )"
+    "result = stepwise_selection(X, y, verbose=True)"
    ]
   },
   {
