Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -152,7 +152,7 @@
     "y = preprocessed['Sale_Price.log']\n",
     "\n",
     "result = stepwise_selection(X, y, verbose=True)\n",
-    "print('')"
+    "print('Resulting features:')"
    ]
   },
   {
