--- a/index.ipynb
+++ b/index.ipynb
@@ -148,8 +148,8 @@
    ],
    "source": [
     "# Your code here\n",
-    "X = preprocessed.drop ('Sale_Price.log', axis=1)\n",
-    "y = preprocessed['Sale_Price.log']\n",
+    "X = preprocessed.drop ('SalePrice_log', axis=1)\n",
+    "y = preprocessed['SalePrice.log']\n",
     "\n",
     "result = stepwise_selection(X, y, verbose=True)\n",
     "print('Resulting features:')\n",
