Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,34 @@
       "Add  Neighborhood_BrDale            with p-value 0.00374541\n",
       "Add  MSZoning_RM                    with p-value 8.29694e-05\n",
       "Add  MSZoning_RL                    with p-value 0.00170469\n",
-      "Add  MSZoning_FV                    with p-value 0.00114668\n"
+      "Add  MSZoning_FV                    with p-value 0.00114668\n",
+      "Add  MSZoning_RH                    with p-value 3.95797e-05\n",
+      "Add  Neighborhood_NWAmes            with p-value 0.00346099\n",
+      "Drop SaleType_WD                    with p-value 0.0554448\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/opt/conda/envs/learn-env/lib/python3.6/site-packages/ipykernel_launcher.py:45: FutureWarning: \n",
+      "The current behaviour of 'Series.argmax' is deprecated, use 'idxmax'\n",
+      "instead.\n",
+      "The behavior of 'argmax' will be corrected to return the positional\n",
+      "maximum in the future. For now, use 'series.values.argmax' or\n",
+      "'np.argmax(np.array(values))' to get the position of the maximum\n",
+      "row.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Add  Neighborhood_Mitchel           with p-value 0.00994666\n",
+      "Drop Neighborhood_Somerst           with p-value 0.0500753\n",
+      "Add  Neighborhood_SawyerW           with p-value 0.00427685\n",
+      "Resulting features:\n",
+      "['GrLivArea_log', 'KitchenQual_TA', '1stFlrSF_log', 'KitchenQual_Fa', 'Neighborhood_OldTown', 'KitchenQual_Gd', 'Neighborhood_Edwards', 'Neighborhood_IDOTRR', 'LotArea_log', 'Neighborhood_NridgHt', 'BldgType_Duplex', 'Neighborhood_NAmes', 'Neighborhood_SWISU', 'Neighborhood_BrkSide', 'Neighborhood_Sawyer', 'Neighborhood_NoRidge', 'Neighborhood_StoneBr', 'Neighborhood_MeadowV', 'SaleType_New', 'Neighborhood_BrDale', 'MSZoning_RM', 'MSZoning_RL', 'MSZoning_FV', 'MSZoning_RH', 'Neighborhood_NWAmes', 'Neighborhood_Mitchel', 'Neighborhood_SawyerW']\n"
      ]
     }
    ],
