--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "import statsmodels.api as "
    ]
   },
   {
