Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -221,7 +221,8 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "import statsmodels.api as "
+    "import statsmodels.api as sm\n",
+    "X_fin"
    ]
   },
   {
