--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,8 @@
    "source": [
     "# Your code here\n",
     "import statsmodels.api as sm\n",
-    "X_fin"
+    "X_fin = X[result]\n",
+    "X"
    ]
   },
   {
