Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,7 @@
     "# Your code here\n",
     "import statsmodels.api as sm\n",
     "X_fin = X[result]\n",
-    "X"
+    "X_with_intercept = sm.a"
    ]
   },
   {
