--- a/index.ipynb
+++ b/index.ipynb
@@ -223,7 +223,8 @@
     "# Your code here\n",
     "import statsmodels.api as sm\n",
     "X_fin = X[result]\n",
-    "X_with_intercept = sm.add_constant(X_fin)\n"
+    "X_with_intercept = sm.add_constant(X_fin)\n",
+    "model = "
    ]
   },
   {
