Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -224,7 +224,7 @@
     "import statsmodels.api as sm\n",
     "X_fin = X[result]\n",
     "X_with_intercept = sm.add_constant(X_fin)\n",
-    "model = "
+    "model = sm.OLS(y, X)"
    ]
   },
   {
