--- a/index.ipynb
+++ b/index.ipynb
@@ -225,7 +225,7 @@
     "X_fin = X[result]\n",
     "X_with_intercept = sm.add_constant(X_fin)\n",
     "model = sm.OLS(y, X_with_intercept).fit()\n",
-    "model."
+    "model.summary()"
    ]
   },
   {
