Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -455,7 +455,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "from sklearn"
    ]
   },
   {
