Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -456,7 +456,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "from sklearn"
+    "from sklearn.feature_selection i"
    ]
   },
   {
