--- a/index.ipynb
+++ b/index.ipynb
@@ -456,7 +456,8 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "from sklearn.feature_selection i"
+    "from sklearn.feature_selection import RFE\n",
+    "from"
    ]
   },
   {
