Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -457,7 +457,7 @@
    "source": [
     "# Your code here\n",
     "from sklearn.feature_selection import RFE\n",
-    "from sklearn.linear_model"
+    "from sklearn.linear_model import LinearRegression\n"
    ]
   },
   {
