--- a/index.ipynb
+++ b/index.ipynb
@@ -457,7 +457,9 @@
    "source": [
     "# Your code here\n",
     "from sklearn.feature_selection import RFE\n",
-    "from sklearn.linear_model import LinearRegression\n"
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "linreg = LinearRegression"
    ]
   },
   {
