Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -459,7 +459,8 @@
     "from sklearn.feature_selection import RFE\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "linreg = LinearRegression"
+    "linreg = LinearRegression()\n",
+    "linreg"
    ]
   },
   {
