--- a/index.ipynb
+++ b/index.ipynb
@@ -460,7 +460,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "linreg = LinearRegression()\n",
-    "linreg"
+    "selecte"
    ]
   },
   {
