--- a/index.ipynb
+++ b/index.ipynb
@@ -460,7 +460,7 @@
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "linreg = LinearRegression()\n",
-    "selector = RFE(linreg, n_fearures_to_sele)"
+    "selector = RFE(linreg, n_fearures_to_select = 5)\n"
    ]
   },
   {
