--- a/index.ipynb
+++ b/index.ipynb
@@ -461,7 +461,7 @@
     "\n",
     "linreg = LinearRegression()\n",
     "selector = RFE(linreg, n_fearures_to_select = 5)\n",
-    "selector = selector.fit(())"
+    "selector = selector.fit()"
    ]
   },
   {
