Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -461,7 +461,7 @@
     "\n",
     "linreg = LinearRegression()\n",
     "selector = RFE(linreg, n_fearures_to_select = 5)\n",
-    "selector = selector.fit(X, y.values)"
+    "selector = selector.fit(X, y.values.ravel())"
    ]
   },
   {
