--- a/index.ipynb
+++ b/index.ipynb
@@ -494,7 +494,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "selected_columns"
    ]
   },
   {
