--- a/index.ipynb
+++ b/index.ipynb
@@ -495,7 +495,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "selected_columns"
+    "selected_columns = X.columns"
    ]
   },
   {
