Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -495,7 +495,8 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "selected_columns = X.columns[selector.support_]"
+    "selected_columns = X.columns[selector.support_]\n",
+    "linreg.fit"
    ]
   },
   {
