--- a/index.ipynb
+++ b/index.ipynb
@@ -496,7 +496,7 @@
    "source": [
     "# Your code here\n",
     "selected_columns = X.columns[selector.support_]\n",
-    "linreg.fit"
+    "linreg.fit(X[])"
    ]
   },
   {
