--- a/index.ipynb
+++ b/index.ipynb
@@ -490,13 +490,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "LinearRegression(copy_X=True, fit_intercept=True, n_jobs=None, normalize=False)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Your code here\n",
     "selected_columns = X.columns[selector.support_]\n",
-    "linreg.fit(X[selected_columns])"
+    "linreg.fit(X[selected_columns],y)"
    ]
   },
   {
