Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -523,7 +523,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code here\n",
+    "yhat"
    ]
   },
   {
