Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -524,7 +524,7 @@
    "outputs": [],
    "source": [
     "# Your code here\n",
-    "yhat = linreg.predict()"
+    "yhat = linreg.predict(X[selected_columns])"
    ]
   },
   {
